[package]
name = "static_dir"
version = "0.2.0"
authors = ["nytopop <ericizoita@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A crate for embedding static assets into warp webservers."
homepage = "https://github.com/nytopop/static_dir"
repository = "https://github.com/nytopop/static_dir"
documentation = "https://docs.rs/static_dir"
keywords = ["warp", "web", "static", "assets", "include"]

[dependencies]
warp = "0.3"
log = "0.4"
include_dir = { version = "0.6", default-features = false }
urlencoding = "1.1"
headers = "0.3"
hyper = "0.14"
http = "0.2"
once_cell = "1.3"
mime_guess = "2.0"
